loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:5: error: '(' expected but identifier found.
    if estSurBiscuit() nbB = nbB+1
       ^Poucet1:6: error: illegal start of simple expression
  }
  ^Poucet1:7: error: '(' expected but identifier found.
  if nbB<3 droite()
     ^